# simple-markdown-showcase

./: .dockerignore  .eslintrc.json  .gitignore  .mypy.ini  .prettierrc.yml  .stylelintrc.yml  README.md  _config.yml  build.py  build.sh  build.yml  config.yaml  package.json  postcss.config.cjs  postcss.config.js  projects.yml  pyproject.toml  release.sh  release.ts  requirements.txt  tailwind.config.cjs  tailwind.config.js  tsconfig.json  watch.ts
.github/workflows/: build.yml  ci.yml  release.yml
assets/: image_sizes.json
assets/css/: _layout.css  _layout.scss  _markdown.scss  layout.css  layout.scss  markdown.scss
assets/data/: build.yml  contacts.yml  header.yml  nav.yml
assets/js/: index.ts  layout.ts
assets/markdown/: _aside_about.md  about_me.md  contact_me.md
ci/: main.py
docker/: Dockerfile  ci.sh
pages/: _aside.md  _footer.md  about_me.md  aboutme.md  contact_me.md
src/: __main__.py  consts.py  consts.ts  entry.ts  github.py  j2.py  log.py  main.py  markdown.py  optimize.py  parse.py  timeit.py  types.py  webp.py
src/css/: _classes.scss  _colour.scss  _layout.scss  _markdown.scss  _variables.scss  layout.css  markdown.scss
src/domain_agnostic/: fs.ts  list.ts  prelude.ts  react.ts  record.ts  sub_process.ts  yaml.ts
src/github/: api.py  api.ts  types.py
src/js/: layout.ts  tsconfig.json
src/render/: image_optimize.ts  imagemin.ts  lib.ts  md.tsx  package.ts  parcel.ts  render.ts  render.tsx  webpack.ts
src/scss/: _layout.scss  _variables.scss  layout.scss
src/templates/: html.html
src/webp/: main.py  (+2 more)
templates/: README.md
(+77 files in other folders)
