[project]
name            = "p"
readme          = "README.md"
requires-python = ">=3.11"
version         = "0"

dependencies = [
  "std2@https://github.com/ms-jpq/std2/archive/2fb3883079e5d46f93d0c196b5961c14d5cfa979.tar.gz",
  "Jinja2==3.0.1",
  "Markdown==3.3.4",
  "Pillow==9.3.0",
  "PyYAML==5.4.1",
  "Pygments==2.9.0",
]
[project.optional-dependencies]
dev = ["mypy", "types-PyYAML", "types-Markdown"]
