[project]
name            = "p"
readme          = "README.md"
requires-python = ">=3.11"
version         = "0"

dependencies = [
  "std2@https://github.com/ms-jpq/std2/archive/b77d227da2854db281182c2bd26805508738d473.tar.gz",
  "Jinja2==3.0.1",
  "Markdown==3.3.4",
  "PyYAML==5.4.1",
  "Pygments==2.9.0",
]
[project.optional-dependencies]
dev = ["mypy", "types-PyYAML", "types-Markdown"]
